<resources>
    <string name="app_name">FirstApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_message">Please login to your account</string>
    <string name="login">Login</string>
    <string name="copyright">All right reserved PT GOJEK INDONESIA</string>
    <string name="danviero_yuzwan">Danviero Yuzwan</string>
    <string name="edit">Edit</string>
    <string name="email">yuzwan19@gmail.com</string>
    <string name="phone">+628888346428</string>
    <string name="go_pay">GO PAY</string>
    <string name="nominal">Rp 100.000</string>
    <string name="go_points">GO POINTS</string>
    <string name="points">1000 pts</string>
    <string name="fb_connect">Click below to connect your GO-JEK account with Facebook</string>
    <string name="fb_connect_button">Connect with Facebook</string>
    <string name="change_lang">Change Language</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_app">Rate GO-JEK App</string>
    <string name="logout">Logout</string>
    <string name="image_desc">image</string>
    <string name="enter_todo">Enter your todo here</string>
    <string name="title_activity_maps">Map</string>

</resources>
